firmware/satellite-firmware/build/log/idf_py_stderr_output_57423
Command: make -j 12 all
make[3]: warning: jobserver unavailable: using -j1.  Add `+' to parent make rule.
/Users/michaeldanley/Documents/GitHub/ORCA-Optical-Replication-Control-Apparatus/firmware/satellite-firmware/main/satellite-firmware.c: In function 'app_main':
/Users/michaeldanley/Documents/GitHub/ORCA-Optical-Replication-Control-Apparatus/firmware/satellite-firmware/main/satellite-firmware.c:73:9: error: implicit declaration of function 'lp_core_init'; did you mean 'lp_i2c_init'? [-Wimplicit-function-declaration]
   73 |         lp_core_init();
      |         ^~~~~~~~~~~~
      |         lp_i2c_init
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/satellite-firmware.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
